--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <meta property="og:title" content="Mutebot">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://urre.github.io/mutebot">
-    <meta property="og:image" content="images/mutebot-logo.png">
+    <meta property="og:url" content="https://urre.github.io/mutebot">
+    <meta property="og:image" content="https://urre.github.io/mutebot/images/mutebot-logo.png">
     <meta property="og:description" content="Mutebot - a collection of regular expressions for Tweetbot to mute tweets in your timeline and mentions.">
     <meta property="og:site_name" content="Mutebot">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:creator" content="@urre">
     <meta name="twitter:title" content="Mutebot">
     <meta name="twitter:description" content="Mutebot - a collection of regular expressions for Tweetbot to mute tweets in your timeline and mentions.">
-    <meta name="twitter:image:src" content="images/mutebot-logo.png">
+    <meta name="twitter:image:src" content="https://urre.github.io/mutebot/images/mutebot-logo.png">
 
     <link rel="icon" type="image/png" href="images/mutebot-logo.png" sizes="32x32">
     <link rel="apple-touch-icon" href="images/mutebot-logo.png">
@@ -63,7 +63,7 @@
             Made by <a href="https://twitter.com/urre">@urre</a>
         </p>
         <p class="righter">
-            Other projects: <a href="https://linknest.cc">Linknest</a>, <a href="http://staytu.be">Staytube</a>
+            Submit new filters with a Pull Request on <a href="https://github.com/urre/mutebot">Github</a>
         </p>
     </footer>
 
