--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Mutebot - a collection of regular expressions for Tweetbot to mute tweets in your timeline and mentions.">
     <meta property="og:site_name" content="Mutebot">
 
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@urre">
     <meta name="twitter:title" content="Mutebot">
     <meta name="twitter:description" content="Mutebot - a collection of regular expressions for Tweetbot to mute tweets in your timeline and mentions.">
