--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
 
     <footer class="footer cf">
         <p class="lefter">
-            Made by <a href="https://twitter.com/urre">@urre</a>
+            Made by <a href="https://twitter.com/urre">Urban Sandén @urre</a>
         </p>
         <p class="righter">
-            Submit new filters with a Pull Request on <a href="https://github.com/urre/mutebot">Github</a>
+            <a href="https://github.com/urre/mutebot">Github</a>            
+            <a href="https://twitter.com/urre/">Twitter</a>
+            <a href="https://dribbble.com/urre/">Dribbble</a>
         </p>
     </footer>
 
