--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <footer class="footer cf">
         <p class="lefter">
-            Made by <a href="https://twitter.com/urre">Urban Sandén @urre</a>
+            Made by <a href="https://twitter.com/urre">@urre</a>
         </p>
         <p class="righter">
             <a href="https://github.com/urre/mutebot">Github</a>            
