--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header">
         <img src="images/mutebot-logo.png" class="logo" alt="Mutebot">
         <h1><strong>Mutebot</strong></h1>
-        <p>A collection of regex filters for <a href="http://tapbots.com/">Tweetbot</a></p>
+        <p>A collection of regexp filters for <a href="http://tapbots.com/">Tweetbot</a></p>
     </header>
 
     <form method="get">
