--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <tr>
                 <th>Name</th>
                 <th>Description</th>                
-                <th>Regex</th>                                
+                <th width="35%">Regex</th>                                
                 <th>Link</th>
                 <th>Author</th>
             </tr>
